src/routes/viewMovie/viewMovie.scss
.movie-modal-wrapper {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
  background: rgba(0, 0, 0, 0.5);
  .movie-modal {
    background-color: #cee5f2;
    border-radius: 10px;
    height: 400px;
    width: 1200px;
    display: grid;
    grid-template-columns: 280px calc(100% - 290px);
    grid-template-rows: 35px repeat(5, 1fr);
    gap: 10px;
    @media (max-width: 1300px) {
      width: 100vw;
      height: 500px;
      grid-template-columns: 200px calc(100vw - 210px);
      grid-template-rows: 40px 120px 120px 90px 90px;
    }
    @media (max-width: 900px) {
      grid-template-columns: 150px calc(100vw - 160px);
      grid-template-rows: 40px 82.5px 82.5px 127.5px 60px 57.5px;
    }
    img {
      height: 100%;
      grid-column: 1;
      grid-row: 1 / span 6;
      border-radius: 10px 0 0 10px;
      @media (max-width: 1300px) {
        width: 200px;
        border-radius: 10px 0 0 0;
        height: 300px;
      }
      @media (max-width: 900px) {
        width: 150px;
        height: 225px;
      }
    }
    .main {
      font-size: 40px;
      font-weight: bold;
      display: flex;
      gap: 10px;
      @media (max-width: 1300px) {
        font-size: 22px;
      }
      .favorite-icon {
        svg {
          cursor: pointer;
          font-size: 40px;
          color: red;
          display: flex;
          align-items: center;
          @media (max-width: 1300px) {
            font-size: 30px;
          }
        }
      }
    }

    .stars {
      margin-top: 20px;
      display: flex;
      @media (max-width: 1300px) {
        margin-top: 30px;
      }
      .star {
        svg {
          font-size: 50px;
          color: #ffc200;
          @media (max-width: 1300px) {
            font-size: 35px;
          }
        }
      }
    }
    .description {
      @media (max-width: 1300px) {
        grid-column: 1 / span 2;
        grid-row: 4;
        margin-left: 5px;
      }
    }
    .director {
      @media (max-width: 900px) {
        grid-column: 1 / span 2;
        grid-row: 5;
        margin-left: 5px;
      }
    }
    .year {
      @media (max-width: 900px) {
        grid-column: 1 / span 2;
        grid-row: 6;
        margin-left: 5px;
      }
    }
    .options {
      grid-column: 2;
      grid-row: 1;
      display: flex;
      justify-content: flex-end;
      margin: 5px 5px 0 0;
      .close-button {
        width: 30px;
        height: 30px;
        cursor: pointer;
        svg {
          height: 100%;
          width: 100%;
        }
      }
    }
  }
}

